load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_proc_macro")

package(default_visibility = ["//visibility:public"])

rust_proc_macro(
    name = "ff-macros",
    srcs = glob(["src/**/*.rs"]),
    edition = "2018",
    version = "0.3.0",
    deps = all_crate_deps(normal = True),
)
